--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,19 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
-    ]
-}
+    ],
+    "java.configuration.runtimes": [
+        {
+          "name": "JavaSE-1.8",
+          "path": "/path/to/jdk-8",
+        },
+        {
+          "name": "JavaSE-11",
+          "path": "/path/to/jdk-11",
+        },
+        {
+          "name": "JavaSE-18",
+          "path": "/path/to/jdk-18",
+          "default": true
+        },
+      ]}
